// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@components/Row renders correctly 1`] = `
<div
  className="row justify-content-md-center pl-3 pr-3 "
>
  Test
</div>
`;

exports[`@components/Row should render without errors, props (withTopPadding = true) 1`] = `
<div
  className="row justify-content-md-center pl-3 pr-3  pt-4"
>
  Test
</div>
`;
